--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/nav.css">
     <link rel="icon" href="../static/images/Monk-logo.png">
-    <title>Blog</title>
+    <title>Home</title>
 </head>
 
 <body>
