--- a/app/templates/nutritionist_signup.html
+++ b/app/templates/nutritionist_signup.html
@@ -5,26 +5,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup</title>
+    <title>Signin</title>
     <link rel="stylesheet" href="../static/css/nav.css">
     <link rel="icon" href="../static/images/Monk-logo.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@200&display=swap" rel="stylesheet">
     <style>
-        .img-column {
-            padding: 0% 0% 0% 6%;
+        .row {
+            padding: 5%;
+            justify-content: center;
         }
 
-        .form-group label,
-        .form-control {
-            font-size: 1.2rem;
+        .img-container {
+            max-width: 400px;
+            max-height: 350px;
         }
 
-        h2 {
-            font-size: 3rem;
-            font-weight: bold;
-            color: #333;
-            letter-spacing: 2px;
+        .img {
+            float: right;
+            height: 100%;
+            width: 100%;
+        }
+
+        form {
+            padding: 5%;
+            border: 2px solid red;
+        }
+
+        .form-container {
+            width: 100%;
+            height: 100%;
         }
     </style>
 
@@ -36,10 +49,6 @@
             <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
         <div class="watermark1">
             <a href="{% url 'blog' %}" class="anch">
-                <!-- <img src="../static/images/watermark/watermark (1).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (2).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (3).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (4).png" class="watermark" alt=""> -->
                 <img src="../static/images/watermark/watermark (6).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (7).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (8).png" class="watermark" alt="">
@@ -47,72 +56,52 @@
                 <img src="../static/images/watermark/watermark (9).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (10).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (11).png" class="watermark" alt="">
-                <!-- <img src="../static/images/watermark/watermark (12).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (13).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (14).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (15).png" class="watermark" alt=""> -->
             </a>
         </div>
 
         <div class="nav">
             <a class="nav-link" href="{% url 'blog' %}">Home</a>
-            <a class="nav-link" href="{% url 'type_of_user' %}">SignUp</a> <a href="{% url 'type_of_user' %}"
+            <a class="nav-link" href="{% url 'type_of_user' %}">SignUp</a><a href="{% url 'type_of_user' %}"
                 class="nav-link">SignIn</a>
         </div>
     </nav>
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-md-6 col-sm-12 img-column">
-                <img src="../static/images/Monk-logo.png" alt="Monk-logo" class="img-fluid" height="500px"
-                    width="500px">
+    <div class="container mt-5 mb-5">
+        {% if messages %}
+        {% for message in messages %}
+        {% if message.tags == "error" %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% else %}
+        {% endif %}
+        {% endfor %}
+        {% endif %}
+        <div class="row no-gutters">
+            <div class="col-md-6 col-sm-12 img-container">
+                <img src="../static/images/Monk-logo.png" alt="Monk-logo" class="img">
             </div>
-            <div class="col-md-6 col-sm-12 border border-dark">
-                <form action="{% url 'user_signup' %}" method="post">
-                    <h2 class="text-center">Sign Up</h2>
+            <div class="col-md-6 col-sm-12 form-container">
+                <form action="{% url 'user_signin' %}" method="post">
                     {% csrf_token %}
-                    {% if messages %}
-                    {% for message in messages %}
-                    {% if message.tags == "error" %}
-                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                        {{ message }}
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
+                    <h2 class="text-center">Sign In</h2>
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input type="text" id="username" name="username" class="form-control"
+                            placeholder="Enter your username">
                     </div>
-                    {% endif %}
-                    {% endfor %}
-                    {% endif %}
-                    <div class="form-group" style="display: inline-block; width: 45%;">
-                        <label for="firstname">First Name</label>
-                        <input type="text" id="firstname" name="firstname" class="form-control"
-                            placeholder="Enter your first name">
-                    </div>
-                    <div class="form-group" style="display: inline-block; width: 45%; margin-left: 8%;">
-                        <label for="lastname">Last Name</label>
-                        <input type="text" id="lastname" name="lastname" class="form-control"
-                            placeholder="Enter your last name">
-                    </div>
-
-                    <div class="form-group mb-2">
-                        <label for="email">Email</label>
-                        <input type="email" id="eamil" name="email" class="form-control"
-                            placeholder="Enter your email id">
-                    </div>
-                    <div class="form-group mb-2">
+                    <div class="form-group">
                         <label for="password">Password</label>
                         <input type="password" id="password" name="password" class="form-control"
                             placeholder="Enter your password">
                     </div>
-                    <div class="form-group mb-2">
-                        <label for="password">Confirm Password</label>
-                        <input type="password" id="password" name="password" class="form-control"
-                            placeholder="Confirm your password">
-                    </div>
-                    <div class="text-center mt-2">
+                    <div class="m-3 text-center">
                         Already have an account? <a href="{% url 'nutritionist_signin' %}">Signin</a>
                     </div>
 
-                    <button type="submit" class="btn btn-primary d-block m-auto px-4">Sign Up</button>
+                    <button type="submit" class="btn btn-primary d-block m-auto px-4">Sign In</button>
                 </form>
             </div>
         </div>
