--- a/app/templates/user_signin.html
+++ b/app/templates/user_signin.html
@@ -14,20 +14,30 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@200&display=swap" rel="stylesheet">
     <style>
-        .img-column {
-            padding: 0% 0% 0% 6%;
+        .row {
+            padding: 5%;
+            justify-content: center;
         }
 
-        .form-group label,
-        .form-control {
-            font-size: 1.2rem;
+        .img-container {
+            max-width: 400px;
+            max-height: 350px;
         }
 
-        h2 {
-            font-size: 3rem;
-            font-weight: bold;
-            color: #333;
-            letter-spacing: 2px;
+        .img {
+            float: right;
+            height: 100%;
+            width: 100%;
+        }
+
+        form {
+            padding: 5%;
+            border: 2px solid red;
+        }
+
+        .form-container {
+            width: 100%;
+            height: 100%;
         }
     </style>
 
@@ -39,10 +49,6 @@
             <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
         <div class="watermark1">
             <a href="{% url 'blog' %}" class="anch">
-                <!-- <img src="../static/images/watermark/watermark (1).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (2).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (3).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (4).png" class="watermark" alt=""> -->
                 <img src="../static/images/watermark/watermark (6).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (7).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (8).png" class="watermark" alt="">
@@ -50,42 +56,37 @@
                 <img src="../static/images/watermark/watermark (9).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (10).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (11).png" class="watermark" alt="">
-                <!-- <img src="../static/images/watermark/watermark (12).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (13).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (14).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (15).png" class="watermark" alt=""> -->
             </a>
         </div>
 
         <div class="nav">
             <a class="nav-link" href="{% url 'blog' %}">Home</a>
-            <a class="nav-link" href="{% url 'type_of_user' %}">SignUp</a> <a href="{% url 'type_of_user' %}"
+            <a class="nav-link" href="{% url 'type_of_user' %}">SignUp</a><a href="{% url 'type_of_user' %}"
                 class="nav-link">SignIn</a>
         </div>
     </nav>
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-md-6 col-sm-12 img-column">
-                <img src="../static/images/Monk-logo.png" alt="Monk-logo" class="img-fluid" height="500px"
-                    width="500px">
+    <div class="container mt-5 mb-5">
+        {% if messages %}
+        {% for message in messages %}
+        {% if message.tags == "error" %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% else %}
+        {% endif %}
+        {% endfor %}
+        {% endif %}
+        <div class="row no-gutters">
+            <div class="col-md-6 col-sm-12 img-container">
+                <img src="../static/images/Monk-logo.png" alt="Monk-logo" class="img">
             </div>
-            <div class="col-md-6 col-sm-12 border border-dark">
+            <div class="col-md-6 col-sm-12 form-container">
                 <form action="{% url 'user_signin' %}" method="post">
-                    <h2 class="text-center">Sign In</h2>
                     {% csrf_token %}
-                    {% if messages %}
-                    {% for message in messages %}
-                    {% if message.tags == "error" %}
-                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                        {{ message }}
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    {% else %}
-                    {% endif %}
-                    {% endfor %}
-                    {% endif %}
+                    <h2 class="text-center">Sign In</h2>
                     <div class="form-group">
                         <label for="username">Username</label>
                         <input type="text" id="username" name="username" class="form-control"
