--- a/app/templates/user_signup.html
+++ b/app/templates/user_signup.html
@@ -155,17 +155,17 @@
                     <div class="form-group">
                         <label for="user-type">Type of User</label><br>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="user-type" id="user" value="user">
+                            <input class="form-check-input" type="radio" name="user-type" id="user" value="user" required>
                             <label class="form-check-label" for="user">User</label>
                         </div>
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="radio" name="user-type" id="physician"
-                                value="physician">
+                                value="physician" required>
                             <label class="form-check-label" for="physician">Physician</label>
                         </div>
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="radio" name="user-type" id="nutritionist"
-                                value="nutritionist">
+                                value="nutritionist" required>
                             <label class="form-check-label" for="nutritionist">Nutritionist</label>
                         </div>
                     </div>
